# lattica-server

./: README.md  REQUIREMENTS.md  docker-compose.yml  env  env.local  instrumentation.ts  next.config.ts  package-lock.json  package.json
host-programs/: .gitignore  Anchor.toml  package-lock.json  package.json
host-programs/programs/host-programs/: Cargo.toml
host-programs/programs/lending-demo/: Cargo.toml
host-programs/programs/lending-demo/src/: lib.rs
host-programs/tests/: host-programs.ts
postman/: Host_Programs_Actions.postman_collection.json
prisma/: schema.prisma
public/: fhe16.js  fhe16.wasm
scripts/: redis-worker.ts  run-indexer.ts  stress-test-ciphertext.ts  test-pubsub.ts
src/app/: globals.css  layout.tsx
src/app/actions.json/: route.ts
src/app/blink/: page.tsx
src/app/demo/: layout.tsx  page.tsx
src/app/store-test/: page.tsx
src/components/: app-header.tsx  app-providers.tsx  store-test-init.tsx
src/components/blink/: blink-adapter.tsx  blink-component.tsx
src/components/fhe/: confidential-variable-card.tsx  fhe-provider.tsx  input-card.tsx  log-console.tsx
src/hooks/: use-demo-logic.ts  use-demo-state.ts  use-event-subscription.ts  use-fhe-actions.ts
src/lib/: db.ts  handle-utils.ts  host-programs-utils.ts  logger.ts  solana-signer.ts
src/lib/indexer/: config.ts  host_programs.json  index.ts  indexer.ts
src/lib/redis/: EVENT_SPEC.md  pubsub.ts
src/lib/solana/: anchor.ts  handle.ts  (+3 more)
src/server/: start-indexer.ts
src/types/: fhe.ts  index.ts  indexer.ts  local-storage.ts  pubsub.ts  redis.ts  store.ts  wasm.ts
(+40 files in other folders)
